force-app/main/default/objects/Booking__c/fields/Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payable_Amount__c</fullName>
    <label>Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>