force-app/main/default/objects/Booking__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>(floor((Check_Out_Time__c -  Check_In_Time__c)*24))
+
(((((Check_Out_Time__c -  Check_In_Time__c)*24)-floor((Check_Out_Time__c -  Check_In_Time__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>