force-app/main/default/objects/Booking__c/validationRules/Booking_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Not-Confirmed&apos;), 
   (NOT(ISBLANK( Room_No__c ))    

      )
   )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is Not-Confirmed, no room should be selected</errorMessage>
</ValidationRule>