force-app/main/default/objects/Booking__c/validationRules/Check_Out_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Check Out&apos;), ISBLANK(Check_Out_Time__c ))</errorConditionFormula>
    <errorDisplayField>Check_Out_Time__c</errorDisplayField>
    <errorMessage>You Should Select Status Check Out first.</errorMessage>
</ValidationRule>