force-app/main/default/objects/Booking__c/validationRules/checkIn_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>checkIn_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Check In&apos;), 
    ISBLANK( Check_In_Time__c ))|| 
   (!ISPICKVAL(Status__c,&apos;Check In&apos;))&amp;&amp;                   (!ISPICKVAL(Status__c,&apos;Check Out&apos;))&amp;&amp; !ISBLANK( Check_In_Time__c )</errorConditionFormula>
    <errorDisplayField>Check_In_Time__c</errorDisplayField>
    <errorMessage>You have to select check in status first</errorMessage>
</ValidationRule>